<resources>
    <string name="app_name">NewsBoard</string>
    <string name="element_text">Element</string>
    <string name="item_element_text">This is element #</string>
    <string name="middle">This is the middle!</string>
</resources>
