...
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/iv_cover"
                app:layout_constraintVertical_bias="0.0"
                app:srcCompat="@drawable/globe"/>

            <TextView
                android:id="@+id/tv_heading"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@drawable/black_transparent"
                android:gravity="start"
                android:padding="5dp"
                android:text="IPhone 7 Launched in India"
...
